adiciona borda em: Sobre Mim, Minhas Skills e Entre em Contato

--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ h1 { background-color: black;
 
 .full-name { color: azure;
     text-decoration: none;
-    font-size: 30px
+    font-size: 30px;
+    padding:  0px 195px 0px 0px;
+    letter-spacing: 2px;
+
   
 }
 
@@ -20,17 +23,27 @@ h1 { background-color: black;
 
 .about-me { color: azure;
     text-decoration: none;
-    font-size: 18px;
-    padding: 0px 0px 0px 300px;
+    font-size: 15px;
+    display: inline-block;
+    border: 2px solid azure;
+    letter-spacing: 2px; 
+    border-radius: 11px;
+    padding: 5px;
 }
 
 .about-me:hover{ color: rgb(9, 179, 17);
+                display: inline-block;
 }
 
 .my-skills{ color: azure;
     text-decoration: none;
-    font-size: 18px;
-    padding:0px 12px 0px 12px;
+    font-size: 15px;
+    padding:5px;
+    display: inline-block;
+    letter-spacing: 2px;
+    border: 2px solid azure;
+    border-radius: 11px;
+
 }
 
 .my-skills:hover{ color: gold;
@@ -38,8 +51,12 @@ h1 { background-color: black;
 
 .contact-me{ color: azure;
     text-decoration: none;
-    font-size: 18px;
-    padding: ;
+    font-size: 15px;
+    padding:5px;
+    display: inline-block;
+    letter-spacing: 2px;
+    border: 2px solid azure;
+    border-radius: 11px;
 }
 
 .contact-me:hover{ color: crimson;
